# t5code

./: .coveragerc  .gitignore  GameDriver.py  GameState.py  LICENSE  README.md  T5Basics.py  T5Load.py  T5Lot.py  T5Mail.py  T5NPC.py  T5ShipClass.py  T5Starship.py  T5Tables.py  T5World.py  coverage.json  extract_trade_goods.py  pyproject.toml  requirements.txt  ship_classes.csv  ships_output.csv  show_captains.py  sim.py  simulation_log.txt  t5_map.txt  test_crew_positions.py
T5Code/: GameState.py  T5Basics.py  T5Lot.py  T5Mail.py  T5ShipClass.py  T5Starship.py  T5Tables.py  T5World.py  __init__.py
examples/: GameDriver.py  analyze_lots.py  calendar_demo.py  profit_aware_trading.py  read_ship_classes.py  show_jump_range.py  sim.py  simple_lot_analysis.py  speculative_cargo_demo.py  starship_states.py  test_sequential_flux.py  trader_skill_demo.py
exploratory_code/: explore_distributions.py
output/: current_sim.txt  simulation_log.txt
resources/: README.md  ships.csv  t5_ship_classes.csv  trade_goods_tables.json
src/T5Code/: T5Basics.py  T5Lot.py  T5Mail.py  T5NPC.py  T5RandomTradeGoods.py  T5ShipClass.py  T5Starship.py  T5Tables.py  T5World.py  __init__.py
src/something/: GameState.py  T5Lot.py  T5Mail.py
src/t5code/: GameState.py  T5Basics.py  T5Company.py  T5Exceptions.py  T5Lot.py  (+9 more)
test/: test_t5NPC.py  test_t5basics.py  test_t5load.py  test_t5lot.py  test_t5mail.py  test_t5shipClass.py  test_t5starship.py  test_t5world.py
tests/: __init__.py  test_gamestate.py  test_integration_data.py  test_integration_errors.py  test_integration_json.py  test_integration_mail.py  test_integration_simulation.py  test_integration_trade.py  test_json_loading.py  test_t5NPC.py  test_t5WorldFreightLotSize.py  test_t5basics.py  test_t5lot.py  test_t5mail.py  test_t5randomTradeGoods.py  test_t5shipClass.py  test_t5starship.py  test_t5world.py
(+39 files in other folders)
