[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t5code"
version = "0.1.0"
description = "Traveller 5 trading mechanics and large-scale simulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Anthony Reynolds", email="grondak@gmail.com"}]
keywords = ["traveller", "simulator", "starship", "game", "trading", "discrete-event"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Core library has no external dependencies
dependencies = []

[project.optional-dependencies]
# Simulation requires SimPy and data analysis tools
simulation = [
  "simpy==4.1.1",
  "matplotlib==3.10.3",
  "numpy==2.2.5",
]
# Development tools
dev = [
  "black==25.12.0",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "coverage==7.13.1",
]
# All extras
all = [
  "simpy==4.1.1",
  "matplotlib==3.10.3",
  "numpy==2.2.5",
  "black==25.12.0",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "coverage==7.13.1",
]

[tool.setuptools]
packages = ["t5code", "t5sim"]
package-dir = {"" = "src"}
